objects/Digital_Campaign_Sources__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>List of Campaign Sources that map to Digital Campaign Media Types</description>
    <fields>
        <fullName>Campaign_Audience__c</fullName>
        <label>Campaign Audience</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Media_Type__c</fullName>
        <label>Campaign Media Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outbound_Marketing_Channel__c</fullName>
        <label>Outbound Marketing Channel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Digital Campaign Sources</label>
    <listViews>
        <fullName>All_Sources</fullName>
        <columns>NAME</columns>
        <columns>Campaign_Audience__c</columns>
        <columns>Campaign_Media_Type__c</columns>
        <columns>Outbound_Marketing_Channel__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Sources</label>
    </listViews>
</CustomObject>